--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -68,7 +68,8 @@
 							height="100%" width="100%"
 							minHeight="0"
 							backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5" 
-							creationComplete="textAreaContainer.setFocus()"/>
+							
+							focusIn="hostComponent.focus = true"/>
 	</s:Scroller>
 	
 	<s:Group width="100%" height="67">
