--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -97,6 +97,11 @@
 				if ( xmlScriptEditor )
 					xmlScriptEditor.scriptAreaComponent.text = value.xmlPresentation;
 			}
+			
+			public function get state(): String
+			{
+				return skin.currentState;
+			}
 
 			override protected function commitProperties() : void
 			{
