--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -56,7 +56,8 @@
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
-		<s:Label text="Multiline window" top="12" left="20" color="#FFFFFF" fontSize="20"/>
+		<s:Label top="12" left="20" color="#FFFFFF" fontSize="20"
+			text="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_title' ) }"/>
 	</s:Group>	
 		
 	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
@@ -83,9 +84,9 @@
 				  bottom="0" gap="15" paddingLeft="25" paddingTop="10"
 				  paddingRight="15" verticalAlign="middle">
 			
-			<mx:Button width="138" height="29" 
+			<mx:Button height="29" cornerRadius="15" 
 					  icon="@Embed(source='icons/Add.png')"
-					  label="Resources" cornerRadius="15" 
+					  label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_add_resource' ) }"
 					  click="{hostComponent.showResourceSelecterWindow()}"/>
 			
 			<mx:Spacer width="100%"/>
@@ -94,7 +95,7 @@
 					  icon="@Embed(source='icons/Cancel.png')"
 					  click="{hostComponent.cancel_close_window()}"/>
 			
-			<s:Button width="88" height="29" label="Save" fontSize="18"
+			<s:Button height="29" label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_save' ) }"
 					  cornerRadius="15"
 					  click="hostComponent.ok_close_window()" />
 		</s:HGroup>
