--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
@@ -107,7 +107,7 @@
 						fontSize="10"/>
 			
 			<s:RichText height="100%" 
-						text="v1.597" color="#CBCBCB"
+						text="v.2.0.1006" color="#CBCBCB"
 						fontSize="10"/>
 		</s:HGroup>
 				
