skinning: types accordion, panels
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6969 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -40,7 +40,7 @@
 		{
 			skin : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.AccordionHeaderSkin");
 			textAlign : center;
-			textSelectedColor : black;
+			textSelectedColor : white;
 			color : white;
 		}
 		
