--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
@@ -177,17 +177,10 @@
 			 verticalAlign="bottom"/>
 
 	<s:HGroup height="100%" width="100%" gap="0">
-		<s:Rect width="5" height="100%">
-			<s:fill>
-				<s:SolidColor color="#424242"/>
-			</s:fill>
-			<s:stroke>
-				<s:SolidColorStroke alpha="0"/>
-			</s:stroke>
-		</s:Rect>
 		<s:List id="attributesList" height="100%" width="100%" 
 				change="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.CURRENT_ATTRIBUTE_CHANGED ))"
-				itemRendererFunction="itemRendererFunction" useVirtualLayout="false">
+				itemRendererFunction="itemRendererFunction" useVirtualLayout="false"
+				contentBackgroundAlpha="0">
 			
 			<s:layout>
 				<s:VerticalLayout gap="0"
