--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -13,10 +13,14 @@
 	</fx:Script>
 	<s:Group width="127" height="100%">
 
-		<mx:Accordion id="typesAccordion" width="100%" height="100%"
+		<mx:Accordion id="typesAccordion" width="100%" height="100%" 
+					  borderVisible="false"
+					  color="white" 
+					  textRollOverColor="white" textSelectedColor="white"
 					  headerHeight="29"
 					  headerRenderer="{ new ClassFactory( TypesAccordionHeader ) }"
-					  headerStyleName="typesAccordionHeader" textAlign="center" verticalGap="0"/>
+					  headerStyleName="typesAccordionHeader" textAlign="center"
+					  verticalGap="0"/>
 		
 	</s:Group>
 		
@@ -28,7 +32,7 @@
 		
 		<panels:ObjectsTreePanel id="objectsTreePanel"
 								 width="100%"
-								 backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
+								 backgroundAlpha="1" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 								 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
 
 		<panels:ObjectAttributesPanel id="objectAttributesPanel"
