--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
@@ -2,8 +2,8 @@
 <local:SparkSkinForHalo xmlns:fx="http://ns.adobe.com/mxml/2009"
 						xmlns:local="mx.skins.spark.*"
 						xmlns:s="library://ns.adobe.com/flex/spark"
-						minWidth="21" minHeight="19" fontSize="10"
-						alpha.disabledStates="0.5">
+						minWidth="21" minHeight="19" 
+						fontSize="10">
 
 	<fx:Script>
 		<![CDATA[
@@ -25,7 +25,6 @@
 			 */
 			override protected function initializationComplete() : void
 			{
-				useChromeColor = true;
 				super.initializationComplete();
 			}
 		]]>
