--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PanelSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PanelSkin.mxml
@@ -83,7 +83,7 @@
 	<s:RectangularDropShadow id="dropShadow"
 							 bottom="0" color="#000000" left="0" right="0"
 							 top="0"
-							 alpha="0.32" angle="90" blRadius="0" blRadius.withControls="{cornerRadius}"
+							 alpha="0.0" angle="90" blRadius="0" blRadius.withControls="{cornerRadius}"
 							 blurX="20" blurY="20" brRadius="0" brRadius.withControls="{cornerRadius}"
 							 distance="11" tlRadius="{cornerRadius}" trRadius="{cornerRadius}"/>
 	<!-- drop shadow can't be hittable so all other graphics go in this group -->
@@ -134,13 +134,14 @@
 				bottomLeftRadiusX.withControls="{cornerRadius}" bottomRightRadiusX.withControls="{cornerRadius}" topLeftRadiusX="{cornerRadius}" topRightRadiusX="{cornerRadius}">
 
 			<s:fill>
-				<s:SolidColor color="{getStyle('backgroundColor')}"
-							  alpha="{getStyle('backgroundAlpha')}"/>
+				<!--<s:SolidColor color="{getStyle('backgroundColor')}"
+							  alpha="{getStyle('backgroundAlpha')}"/>-->
+				<s:SolidColor color="#ffffff"/>
 			</s:fill>
 		</s:Rect>
 
 		<!-- layer 3: contents -->
-		<s:Group id="contents"
+		<s:Group id="contents" 
 				 bottom="0" left="0" right="0" top="0">
 
 			<s:layout>
