change multiline window size
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6973 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
@@ -39,8 +39,8 @@
 			{				
 //				var popUpWindowManager : PopUpManager = PopUpManager.getInstance();
 				multilineWindow = new MultilineWindow();
-				multilineWindow.width = 500;
-				multilineWindow.height = 400;
+				//multilineWindow.width = 500;
+				//multilineWindow.height = 400;
 
 				multilineWindow.attributeValue = _value;
 				multilineWindow.title = _title;
