insert resource on double_click
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6975 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -132,7 +132,9 @@
 								 focusColor="#CCCCCC" 
 								 rollOverColor="#000000" selectionColor="#000000"
 								 top="20" left="4" right="2" bottom="10"
-								 creationComplete="resourcesList_creationCompleteHandler(event)">
+								 creationComplete="resourcesList_creationCompleteHandler(event)"
+								 doubleClickEnabled="true"
+								 doubleClick="hostComponent.onApplyClick()">
 						<s:layout>
 							<s:TileLayout horizontalGap="4" verticalGap="8" requestedColumnCount="4"  requestedRowCount="2">
 								
