--- a/IDE/v.02/common/src/net/vdombox/view/skins/TabNavigatorSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/TabNavigatorSkin.mxml
@@ -46,7 +46,7 @@
 			 left="0" right="0"
 			 updateComplete="checkScrollbar()">
 		<s:TabBar id="tabBar"
-				  skinClass="net.vdombox.skins.TabBarSkin"
+				  skinClass="net.vdombox.view.skins.TabBarSkin"
 				  requireSelection="true"/>
 	</s:Group>
 
@@ -56,7 +56,7 @@
 
 	<tabNavigatorClasses:TabNavigatorScrollBar id="hsb"
 											   height="24" pageSize="60" stepSize="2" width="100%"
-											   repeatInterval="150" skinClass="net.vdombox.skins.TabNavigatorScrollBarSkin"
+											   repeatInterval="150" skinClass="net.vdombox.view.skins.TabNavigatorScrollBarSkin"
 											   visible="false" smoothScrolling="true" viewport="{ tabBarGroup }"/>
 
 </s:SparkSkin>
