--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
@@ -125,15 +125,15 @@
 	<s:HGroup right="16" top="12" height="100%" minWidth="40" minHeight="20" gap="10">
 		<!-- minimize button -->
 		<s:Button id="minimizeButton"
-				  bottom="2" skinClass="net.vdombox.skins.MainMinimizeBtnSkin" verticalCenter="0"/>
+				  bottom="2" skinClass="net.vdombox.view.skins.MainMinimizeBtnSkin" verticalCenter="0"/>
 		
 		<!-- maximize button -->
 		<s:Button id="maximizeButton"
-				  skinClass="net.vdombox.skins.MainMaximizeBtnSkin" skinClass.maximizedGroup="net.vdombox.skins.MainRestoreBtnSkin" verticalCenter="0"/>
+				  skinClass="net.vdombox.view.skins.MainMaximizeBtnSkin" skinClass.maximizedGroup="net.vdombox.view.skins.MainRestoreBtnSkin" verticalCenter="0"/>
 		
 		<!-- close button -->
 		<s:Button id="closeButton"
-				  skinClass="net.vdombox.skins.MainCloseBtnSkin" verticalCenter="0"
+				  skinClass="net.vdombox.view.skins.MainCloseBtnSkin" verticalCenter="0"
 				  click="closeButton_clickHandler(event)"/>	
 	</s:HGroup>
 	
