--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -27,7 +27,8 @@
 		<s:State name="normalWithControlBar" />
 		<s:State name="disabled" />
 		<s:State name="normal" />
-		
+		<s:State name="normalAndInactive"/>
+		<s:State name="disabledAndInactive"/>
 	</s:states>
 	
 	<!-- SkinParts
@@ -48,8 +49,10 @@
 			  gap="0">
 	
 	<s:Group width="100%" height="42">
-		
-		<s:Rect bottom="0" left="0" right="0" top="0">
+		<s:TitleBar id="titleBar"
+					minHeight="32" width="100%"
+					skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowTitleBarSkin"/>
+		<!--<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
 				<s:LinearGradient rotation="90">
 					<s:GradientEntry color="#B70000"/>
@@ -58,7 +61,7 @@
 			</s:fill>
 		</s:Rect>
 		<s:Label top="12" left="20" color="#FFFFFF" fontSize="20"
-			text="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_title' ) }"/>
+			text="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_title' ) }"/>-->
 	</s:Group>	
 		
 	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
@@ -101,6 +104,11 @@
 					  click="hostComponent.ok_close_window()" />
 		</s:HGroup>
 		
+		<s:Button id="gripper" 
+				  right="0" bottom="0"
+				  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowGripperSkin" 
+				  tabEnabled="false"
+				  alpha="0.9"/>
 	</s:Group>	
 		
 	</s:VGroup>
