--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -4,7 +4,7 @@
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 			 xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*"
-			 width="790" height="550" minWidth="600" minHeight="500"
+			 width="790" height="550" minWidth="700" minHeight="500"
 			 focusColor="#CCCCCC">
 	<fx:Metadata>
 		<![CDATA[ 
@@ -38,6 +38,8 @@
 		<s:State name="disabledWithControlBar"/>
 		<s:State name="inactiveWithControlBar"/>
 		<s:State name="normalWithControlBar"/>
+		<s:State name="normalAndInactive"/>
+		<s:State name="disabledAndInactive"/>
 	</s:states>
 	
 	<!-- Transitions for open and close -->
@@ -51,7 +53,10 @@
 			  left="9" top="9" right="9" bottom="9">
 		
 		<s:Group width="100%" height="42">
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:TitleBar id="titleBar"
+						minHeight="32" width="100%"
+						skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowTitleBarSkin"/>
+			<!--<s:Rect bottom="0" left="0" right="0" top="0">
 				<s:fill>
 					<s:LinearGradient rotation="90">
 						<s:GradientEntry color="#B70000"/>
@@ -60,7 +65,7 @@
 				</s:fill>
 			</s:Rect>
 			<s:Label top="12" left="20" color="#FFFFFF" fontSize="20"
-				text="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_title' ) }" />
+				text="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_title' ) }" />-->
 		</s:Group>
 		
 		<s:Group width="100%" height="39">
@@ -126,7 +131,6 @@
 								 contentBackgroundAlpha="0" contentBackgroundColor="#000000" borderVisible="false"
 								 dataProvider="{ hostComponent._resources }"
 								 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.ListItem"
-								 
 								 x.normal="0" 
 								 chromeColor="#777777"
 								 focusColor="#CCCCCC" 
@@ -136,7 +140,8 @@
 								 doubleClickEnabled="true"
 								 doubleClick="hostComponent.onApplyClick()">
 						<s:layout>
-							<s:TileLayout horizontalGap="4" verticalGap="8" requestedColumnCount="4"  requestedRowCount="2">
+							<s:TileLayout horizontalGap="4" verticalGap="8" requestedColumnCount="-1"  requestedRowCount="-1"
+										  >
 								
 							</s:TileLayout>
 						</s:layout>
@@ -162,6 +167,20 @@
 				
 			</s:VGroup>
 			
+			<!-- resize handle -->
+			<!--<s:Group id="resizeHandle" right="1" bottom="1" width="15" height="15">
+				<s:Path data="M 4 13 L 13 4 L 13 13 L 4 13">
+					<s:fill>
+						<s:SolidColor color="0x000000" />
+					</s:fill>
+				</s:Path>
+			</s:Group>-->
+			
+			<s:Button id="gripper" 
+					  right="0" bottom="0"
+					  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowGripperSkin" 
+					  tabEnabled="false"
+					  alpha="0.9"/>
 		</s:Group>
 	</s:VGroup>
 	
