--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -13,9 +13,10 @@
 	<s:VGroup height="100%" width="220">
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
-									 width="100%" title="{ resourceManager.getString( 'Events_General', 'objects_tree_panel_title' ) }" />
+									 height="100%" width="100%" 
+									 title="{ resourceManager.getString( 'Events_General', 'objects_tree_panel_title' ) }" />
 
 		<components:EventsPanel id="eventsPanel"
-								width="100%" />
+								width="100%" height="100%"/>
 	</s:VGroup>
 </s:HGroup>
