paste id from ResourceSelectorWindow in MultilineWindow
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7000 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -5,7 +5,9 @@
 			 xmlns:libcomponents="net.vdombox.ide.common.components.*"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 creationComplete="creationCompleteHandler()">
+			 width="100%" height="100%"
+			 creationComplete="creationCompleteHandler()"
+			 resize="trace('EditorSkin')">
 
 	<fx:Metadata>
 		<![CDATA[ 
