--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -4,7 +4,8 @@
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  height="100%" width="100%" gap="0" 
-		  xmlns:panels="net.vdombox.ide.modules.wysiwyg.view.components.panels.*">
+		  xmlns:panels="net.vdombox.ide.modules.wysiwyg.view.components.panels.*"
+		  resize="parentApplication.dispatchEvent(new Event('rrrr'))">
 
 	<fx:Script>
 		<![CDATA[
@@ -26,7 +27,7 @@
 		
 	
 	<components:WorkArea id="workArea"
-						 height="100%" width="100%"/>
+						 height="100%" width="100%" resize="trace('WorkArea')"/>
 
 	<mx:VDividedBox height="100%" width="228">
 		
